Grafting complete for: Variable length

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <version>2.0.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-graphx_2.11</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
     <!-- Tests -->
 
     <dependency>
