--- a/pom.xml
+++ b/pom.xml
@@ -337,12 +337,18 @@
             <version>0.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.lihaoyi</groupId>
+            <artifactId>sourcecode_2.11</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+
         <!-- Tests -->
 
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
-            <version>2.2.6</version>
+            <version>3.0.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
