--- a/pom.xml
+++ b/pom.xml
@@ -286,7 +286,21 @@
         </profile>
     </profiles>
 
+    <repositories>
+        <!-- list of other repositories -->
+        <repository>
+            <id>SparkPackagesRepo</id>
+            <url>http://dl.bintray.com/spark-packages/maven</url>
+        </repository>
+    </repositories>
+
     <dependencies>
+
+        <dependency>
+            <groupId>neo4j-contrib</groupId>
+            <artifactId>neo4j-spark-connector</artifactId>
+            <version>2.0.0-M2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.scala-lang</groupId>
