--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                         <arg>-Ywarn-adapted-args</arg>
                         <arg>-Yopt-warnings:at-inline-failed</arg>
                         <arg>-Yopt:l:project</arg>
+                        <arg>-Ypartial-unification</arg>
                     </args>
                 </configuration>
             </plugin>
@@ -333,6 +334,18 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>${scala.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.typelevel</groupId>
+            <artifactId>cats_2.11</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.atnos</groupId>
+            <artifactId>eff_2.11</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
         <dependency>
