--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <scala.version>2.11.8</scala.version>
         <scala.binary.version>2.11</scala.binary.version>
         <spark.version>2.1.0</spark.version>
+        <neo4j.version>3.2.0-alpha04</neo4j.version>
     </properties>
 
     <build>
@@ -309,14 +310,20 @@
 
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-cypher-frontend-3.2</artifactId>
-            <version>3.2.0-alpha01</version>
+            <artifactId>neo4j-cypher-compiler-3.2</artifactId>
+            <version>${neo4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-cypher-frontend-3.2</artifactId>
-            <version>3.2.0-alpha01</version>
+            <version>${neo4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-cypher-frontend-3.2</artifactId>
+            <version>${neo4j.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
