--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <scala.binary.version>2.11</scala.binary.version>
         <spark.version>2.1.0</spark.version>
         <neo4j.version>3.2.0-alpha08</neo4j.version>
+        <graphframes.version>0.4.0-spark2.1-s_2.11</graphframes.version>
     </properties>
 
     <build>
@@ -325,9 +326,9 @@
         </dependency>
 
         <dependency>
-            <groupId>default</groupId>
-            <artifactId>graphframes_2.11</artifactId>
-            <version>0.4.0-SNAPSHOT-spark2.1</version>
+            <groupId>graphframes</groupId>
+            <artifactId>graphframes</artifactId>
+            <version>${graphframes.version}</version>
         </dependency>
 
         <dependency>
